@@ -32,7 +32,7 @@ public class RegistrableMenuCommand extends Command {
 
     public RegistrableMenuCommand(final @NotNull DeluxeMenus plugin,
                                   final @NotNull Menu menu) {
-        super(menu.options().commands().isEmpty() ? menu.options().name() : menu.options().commands().get(0));
+        super(menu.options().commands().isEmpty() ? menu.options().name() : menu.options().commands().getFirst());
         this.plugin = plugin;
         this.menu = menu;
 
@@ -42,12 +42,12 @@ public class RegistrableMenuCommand extends Command {
     }
 
     @Override
-    public boolean execute(final @NotNull CommandSender sender, final @NotNull String commandLabel, final @NotNull String[] typedArgs) {
+    public boolean execute(final @NotNull CommandSender sender, final @NotNull String commandLabel, final @NotNull String @NotNull [] typedArgs) {
         if (this.unregistered) {
             throw new IllegalStateException("This command was unregistered!");
         }
 
-        if (!(sender instanceof Player)) {
+        if (!(sender instanceof Player player)) {
             Msg.msg(sender, "Menus can only be opened by players!");
             return true;
         }
@@ -77,7 +77,6 @@ public class RegistrableMenuCommand extends Command {
             }
         }
 
-        Player player = (Player) sender;
         plugin.debug(DebugLevel.LOWEST, Level.INFO, "opening menu: " + menu.options().name());
         menu.openMenu(player, argMap, null);
         return true;
@@ -138,6 +137,7 @@ public class RegistrableMenuCommand extends Command {
             knownCommands = SimpleCommandMap.class.getDeclaredField("knownCommands");
             knownCommands.setAccessible(true);
 
+            //noinspection unchecked
             final Map<String, Command> knownCommandsMap = (Map<String, Command>) knownCommands.get(cMap.get(Bukkit.getServer()));
 
             // We need to remove every single alias because CommandMap#register() adds them all to the map.
